--- a/main.css
+++ b/main.css
@@ -12,6 +12,7 @@
 body{
     max-width: 100vw;
     overflow-x: hidden;
+    
 }
 /*-------------------------------------------------
         navbar
@@ -23,6 +24,7 @@ nav{
     background-color: #813588;
     padding-top: 1.5rem;
     padding-bottom: 1rem;
+    
 
 }                    
 nav .menu{
@@ -69,6 +71,10 @@ nav .menu .call-icon,.SearchIcon{
     width: 25px;
 
 }
+.homebannerbg{
+    height: 83vh;
+    width: auto;
+}
 .hero .hero-bg{
     width: 100vh;
     position: relative;
@@ -91,47 +97,45 @@ nav .menu .call-icon,.SearchIcon{
 }
 .hero .form{
     position: absolute;
-    z-index: 1008;
+    z-index: 1009;
     right: 0;
     max-width: 400px;
-    height: 555px;
-    padding: 30px 30px;
-    margin-top: -70rem;
+    height: 530px;
+    margin-top: -31.5rem;
     margin-right: 3rem;
     border-radius: 20px;
     text-align: center;
     background: #fcfcfc;
     padding: 15px 25px 25px 25px;
+    
        
 }
-.hero .form{
-    display: -ms-inline-grid;
 
-}
 .hero .top{
     color: #2B2B2B;
     font-size: 1.4rem;
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 8px;
     font-weight: 500;
 }
 .hero .middle{
     font-size: 0.8rem;
     color: #666;
-    margin: 0 0 10px;
+    margin: 0 0 8px;
 }
 .hero .bottom{
     font-size: 1rem;
     font-weight: 600;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
     font-size: 16px;
 }
 
 
 .hero .form form input{
-    width: 21rem;
+    width: 22rem;
     margin-bottom: 25px;
-    padding: 10px 10px;
+    padding: 8px 8px;
+    height: 2.55rem;
 }
 .buttons-on-off{
     display: block;
@@ -147,6 +151,7 @@ nav .menu .call-icon,.SearchIcon{
     margin: 10px 0px;
     font-weight: 500;
     text-decoration: none;
+    cursor: pointer;
 }
 .form .lowest{
     font-size: 1rem;
@@ -162,14 +167,85 @@ nav .menu .call-icon,.SearchIcon{
     border: 1px solid rgb(236, 230, 230);
     font-weight: 500;
     text-decoration: none;
-    box-shadow: rgba(149, 157, 165, 0.2)
+    box-shadow: rgba(149, 157, 165, 0.2);
+    
 }
 .form .Book-class{
     width: 21rem;
     margin-bottom: 25px;
     
 }
+
+.hero .form form .Book-class{
+    padding: 10px 10px;
+    font-size: 25px;
+    font-weight: 600;
+    color: white;
+    border: transparent;
+    border-radius: 10px;
+    background-image: linear-gradient(to right, #FF8E32, #FF5263);
+    cursor: pointer;
+}
+
+.hero .form .OTP{
+    width: 90PX;
+    height: 40px;
+    position: absolute;
+    padding: 10PX 10px;
+    font-size: 15px;
+    border: transparent;
+    border-radius: 5px;
+    color: white;
+    background-image: linear-gradient(to right, #5C72FF, #8C3FFF);
+    margin-top: -64.55px;
+    margin-left: 261px;
+    cursor: pointer;
+}
+
+.form .hr1{
+    border:1px solid #f5f2f5;
+    width: 8.5rem;
+    margin-left: 10px;
+    margin-bottom: 22px;
+    margin-top: -19px;
+}
+.form .hr3{
+    border:1px solid #f5f2f5;
+    width: 4.6rem;
+    margin-left: 264px;
+    margin-bottom: 22px;
+    margin-top: -23px;
+}
+.form  .hr2{
+    border:1px solid #f5f2f5 ;
+    width: 8.5rem;
+    margin-left: 10px;
+    margin-bottom: 23px;
+    margin-top: -26px;
+}
+.form  .hr4{
+    border:1px solid #f5f2f5 ;
+    width: 5.5rem;
+    margin-left: 239px;
+    margin-bottom: 23px;
+    margin-top: -25px;
+}
+
+.hero .form form ion-icon{
+    width: 12px;
+    position: absolute;
+    z-index: 1008;
+    margin-top: -52px;
+    margin-left: 320px;
+
+
+}
+.hero .curves{
+    position:absolute;
+    z-index: 1008;
+    margin-top: -28px;
+    width: 101%;
+}
 .test{
-    background-color: #666;
-    height: 100vh;
+    height: 700px;
 }
