--- a/main.css
+++ b/main.css
@@ -242,6 +242,7 @@ input:focus {
     border: transparent;
     border-radius: 5px;
     color: white;
+    z-index: 4;
     background-image: linear-gradient(to right, #5C72FF, #8C3FFF);
     margin-top: -64.55px;
     margin-left: 261px;
@@ -280,7 +281,7 @@ input:focus {
 .hero .form form ion-icon{
     width: 12px;
     position: absolute;
-    z-index: 1008;
+    z-index: 4;
     margin-top: -52px;
     margin-left: 320px;
 
@@ -301,18 +302,27 @@ input:focus {
 }
 .sec2 h2{
    text-align: center;
-   margin-top: 20px;
+   margin-top: 30px;
    padding-left: 320px;
    padding-right: 320px;
+   color: #2c2c2c;
+   font-weight: 600;
+   line-height: 1.18;
+   margin-bottom: 10px !important;
 }
 
 .sec2 .title{
     text-align: center;
     margin-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     font-weight: 500;
-    padding-left: 300px;
-    padding-right: 200px;
+    padding-left: 310px;
+    padding-right: 300px;
+    font-family: Roboto;
+    font-weight: 500;
+    color: #2c2c2c;
+    font-size: 15px;
+    margin-bottom: 30px;
 
 }
 /* ------------------card class 4----- */
@@ -321,8 +331,9 @@ input:focus {
     justify-content: center;
     align-items: center;
     margin-top: 10px;
-    margin-right: 4rem;
-    margin-left: 4rem;
+    width: 920px;
+    margin-right: 3rem;
+    margin-left: 3rem;
     margin-bottom: 30px;
     height: 310px;
     border-radius: 10px;
@@ -337,6 +348,7 @@ input:focus {
     color: white;
     position: absolute;
     top: 0;
+    width: 150px;
     padding: 5px 20px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -354,11 +366,12 @@ input:focus {
     color: #070500;
     left: 90%;
     border-radius: 5.5px;
+    box-shadow: 0 -5.5px 3px -3px #00000030;
 
 }
 .sec2 .triangle{
     position: absolute;
-    top: 10.4%;
+    top: 10%;
     left: 88.15%;
     color: #fec004;
     transform: rotate(150deg);
@@ -373,13 +386,16 @@ input:focus {
     margin-top: 10px;
 }
 .sec2 .left .img{
-   margin-left: 20px;
+   margin-left: 10px;
+   max-width: 220px
 
 }
 .sec2 .left .text img{
-    width: 10rem;
-    margin-left: 4rem;
+    width: 9rem;
+    margin-left: 2rem;
     margin-top: -2.5rem;
+    display: flex;
+    align-items: center;
 }
 .sec2 .left .img img{
     width: 10rem;
@@ -387,6 +403,8 @@ input:focus {
     max-width: 220px;
     height: 200px;
     width: 180px;
+    
+
     }
 .sec2 .left .text p{
     text-align: center;
@@ -399,25 +417,35 @@ input:focus {
     letter-spacing: normal;
     color: #2c2c2d;
     margin: 10px 0 10px 0;
+    
 }  
-.sec2 .left h4{
+.sec2 .left h4,.sec2 .right h4{
     text-align: center;
     color: #2c2c2d;
     margin-left: -2rem;
     margin-top: 10px;
+    cursor: pointer;
 }
+
    
 .sec2 .right .img{
     margin-left: 20px;
+    max-width: 220px
+    
  
  }
  .sec2 .right .img img{
- width: 10rem;
+    height: 165px;
+    width: 187px;
  }
 
 
  .sec2 .right .text img{
      width: 10rem;
+     margin-left: 2rem;
+     margin-top: -2.5rem;
+     display: flex;
+     align-items: center;
  }
 .sec2 .right .text p{
     text-align: center;
@@ -442,4 +470,22 @@ input:focus {
     display: block;
     box-shadow: #cac6c6 2px 0;
     background: #fff;
+}
+
+.card-class-4 .free-class{
+    position: absolute;
+    bottom: 0;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+    font-size: 16px;
+    background-image: linear-gradient(to right, #ff9234, #fc6274 100%);
+    border-radius: 10px;
+    padding: 15px 30px;
+    color: #fff;
+    border: none;
+    outline: 0;
+    min-width: 170px;
+    text-align: center;
 }
