--- a/main.css
+++ b/main.css
@@ -297,7 +297,7 @@ input:focus {
 }
 /* ------------------------------------------sec2----------------------------- */
 .sec2{
-    height: 1600px;
+    height: 1900px;
     
 }
 .sec2 h2{
@@ -349,7 +349,8 @@ input:focus {
     position: absolute;
     top: 0;
     width: 150px;
-    padding: 5px 20px;
+    height: 35px;
+    padding: 8px 20px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     font-size: 16px;
@@ -516,7 +517,8 @@ input:focus {
     position: absolute;
     top: 0;
     width: 150px;
-    padding: 5px 20px;
+    height: 35px;
+    padding: 8px 20px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     font-size: 16px;
@@ -636,7 +638,7 @@ input:focus {
     align-items: center;
     height: 310px;
     padding: 0px 20px;
-    width: 50%;
+    width: 480px;
     margin: 20px 0px 30px;
     background-color: #f2f2f2;
     padding-right: 15px;
@@ -651,7 +653,7 @@ input:focus {
     justify-content: center;
     align-items: center;  
     height: 310px;
-    width: 50%;
+    width: 480px;
     padding: 15px 0px;
     background-color: #f2f2f2;
     margin: 20px 0px 30px;
@@ -680,7 +682,8 @@ input:focus {
     position: absolute;
     top: -0.4rem;
     width: 150px;
-    padding: 5px 20px;
+    height: 35px;
+    padding: 8px 20px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     font-size: 16px;
@@ -694,7 +697,8 @@ input:focus {
     position: absolute;
     top: -0.4rem;
     width: 150px;
-    padding: 5px 20px;
+    height: 35px;
+    padding: 8px 20px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     font-size: 16px;
@@ -755,3 +759,54 @@ input:focus {
     display: inline-block;
     cursor: pointer;
  }
+/* --------------------------------------------------------- */
+.sec2 .container{
+    padding-right: 12px;
+    padding-left: 2px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 64px;
+    position: relative;
+    
+    
+} 
+.sec2 .inner-container{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    margin-top: 50px;
+    
+   
+    
+}
+.sec2 .container-img{
+    width: 250px;
+}
+.sec2 .container-p{
+    font-size: 22px;
+    line-height: 32px;
+    margin-top: 20px;
+    color: #333;
+    padding-left: 55px;
+    padding-right: 35px;  
+    
+}
+.sec2 .byjus-advantage{
+
+justify-content: center;
+text-align: center;
+padding: 0px 15px ;
+
+}
+.container-title h2{
+    text-align: center;
+   
+    
+    padding-left: 320px;
+    padding-right: 320px;
+    color: #2c2c2c;
+    font-weight: 600;
+    line-height: 1.18;
+    margin-bottom: 10px !important;
+    font-size: 29px;
+}
