--- a/main.css
+++ b/main.css
@@ -338,7 +338,8 @@ input:focus {
 }
 /* ------------------------------------------sec2----------------------------- */
 .sec2{
-    height: 3390px;
+    height: 3235px;
+
     
 }
 .sec2 h2{
@@ -1093,10 +1094,23 @@ margin-right: 2px;
 }
 
 .footer{
-    height: 1000px;
+    height: 2300px;
    background-color: #813588;
    margin-top: -5px;
+    padding-top: 20px;
+    width: 100%;
+    
+    
+    
 }
+.footer-main-div{
+    display: flex;
+    flex-direction:row;
+    width: 1170px;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
 .last-img-curve{
     background-size: 100%;
     background-position: left bottom;
@@ -1108,4 +1122,269 @@ margin-right: 2px;
     z-index: 100;
    
 }
+.footer-div-first{
+ margin-left: 40px;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    width: 14%;
+}
+ 
 
+.footer-div{
+ width: 14%;
+ position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    
+}
+
+.footer-div-first h2{
+    color: #ffc846;
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-weight: 700;
+}
+.footer-div h2{
+    color: #ffc846;
+    font-size: 14px;
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-weight: 700;
+    
+}
+.footer li{
+    color: white;
+    text-decoration: none;
+    font-weight: 400;
+    outline: 0;
+    border: none;
+    margin-bottom: 10px;
+    font-size: 12px;
+    font-family: Roboto;
+    cursor: pointer;
+    
+}
+ul {
+    list-style-type: none;
+  }
+  
+  ul > li:hover{
+    font-weight:bold;
+    
+}
+.footer-follow-img{
+    cursor: pointer;
+}
+.line-3{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #eeeeee;
+    opacity: 0.5;
+    
+}
+.lower-section-footer{
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+
+
+.lower-section-footer-content{
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.footer-p1{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+.footer-p2{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+.footer-p3{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+.footer-p4{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+.footer-p5{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+.footer-5-5{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+.footer-p6{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+.footer-p7{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+.footer-p8{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+}
+.footer-p9{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+}
+.footer-p10{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 30px;
+}
+.footer-p11{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+.footer-p12{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+.footer-p13{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 10px;
+}
+.footer-p14{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    
+}
+.footer-p15{
+    color: #fff;
+    font-size: 13px;
+    line-height: 1.6;
+    margin-bottom: 20px;
+}
+.footer-p16{
+    color: #fff;
+    font-size: 13px;
+    line-height: 2;
+    margin-bottom: 20px;
+}
+
+.footer-h1{
+    color: #ffc846;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+
+}
+.footer-h2{
+    color: #ffc846;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.footer-h3{
+    color: #ffc846;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.footer-h4{
+    color: #ffc846;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.footer-h5{
+    color: #ffc846;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.footer-h6{
+    color: #ffc846;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.footer-h7{
+    color: #ffc846;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.footer-h8{
+    color: #ffc846;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.footer-h9{
+    color: #ffc846;
+    font-size: 14px;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.line-4{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #eeeeee;
+    opacity: 0.5;
+    
+}
+.ul-last{
+    display: flex;
+    margin-left: 40px;
+
+}
+.last-part-footer{
+    display: flex;
+    flex-direction: row;
+    color: white;
+    
+}
+.footer-last-corner{
+    margin-left: 480px;
+    font-size: 13px;
+}
